more added content, adjusted margin in ul-s

--- a/linearnaAlgebra/témy/gaussovTvarMatice/index.html
+++ b/linearnaAlgebra/témy/gaussovTvarMatice/index.html
@@ -67,7 +67,7 @@
                 algebre) výsadné postavenie. Hovoríme, že matica je v <strong>Gaussovom (stupňovitom) tvare</strong>
                 , ak sú splnené nasledujúce štyri podmienky:
               <div style="text-align: center;">
-                <ul style="display: inline-block; text-align: left; margin: 4rem auto;">
+                <ul style="display: inline-block; text-align: left; margin: 2rem auto;" class="rules">
                   <li>G1. Prvý l'avý nenulový prvok v každom riadku je rovný 1.
                     (tomuto prvku hovoríme vedúca jednotka v riadku / pivot).</li>
                   <li>G2. Každý
