--- a/linearnaAlgebra/témy/riadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/riadkoveOperacie/index.html
@@ -63,7 +63,7 @@
                         lineárnych rovníc sa výhodne formulujú práve v reči matíc. Preto je užitočné zaviest' analógie
                         uvedených operácií aj na maticiach. Pôjde o nasledovné tri tzv. riadkové operácie:
                      <div style="text-align: center;">
-                        <ul style="display: inline-block; text-align: left; margin: 4rem auto;">
+                        <ul style="display: inline-block; text-align: left; margin: 2rem auto;" class="rules">
                            <li>O1: Vzájomná výmena niektorých dvoch riadkov matice.</li>
                            <li>O2: Vynásobenie niektorého riadku nenulovou konštantou.</li>
                            <li>O2: Pripočítanie násobku jedného riadku matice k inému riadku.</li>
