--- a/linearnaAlgebra/témy/vypočetGauss/index.html
+++ b/linearnaAlgebra/témy/vypočetGauss/index.html
@@ -57,13 +57,16 @@
                <ul class="nav nav-tabs nav-fill" style="margin-bottom: 3rem;" id="myTab" role="tablist"></ul>
                <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
-                     <p>Na výpočet Gaussovho tvaru matice možno použit' nasledujúci jednoduchý algoritmus:
+                     <p>Na výpočet <strong>Gaussovho tvaru matice</strong> možno použit' nasledujúci jednoduchý
+                        algoritmus:
                      <div style="text-align: center;">
                         <ul style="display: inline-block; text-align: left; margin: 1rem auto;" class="rules">
                            <li>A1: Ak matica
                               má všetky riadky nulové, tak je automaticky v Gaussovom tvare. V opačnom prípade vyberieme
                               taký
-                              riadok, v ktorom nenulový prvok má najmenší stĺpcový index (je "najviac vl'avo"), a
+                              riadok, v ktorom <span style="color:orangered">nenulový prvok</span> má najmenší stĺpcový
+                              index (je "najviac
+                              vl'avo"), a
                               pomocou
                               riadkovej operácie O1 tento riadok presunieme na prvé miesto.</li>
                            <li>A2: Použitím riadkovej operácie O2
@@ -75,6 +78,13 @@
                               matici. Postup rekurzívne opakujeme až kým nedostaneme maticu v Gaussovom tvare.</li>
                         </ul>
                      </div>
+                     </p>
+                     <p> <strong>Redukovaný Gaussov (stupňovitý) tvar</strong> sa pomocou uvedeného algoritmu dostane
+                        tak, že v kroku A2 sa pomocou
+                        postupného používania riadkovej operácie O3 postaráme o to, aby sme vynulovali aj prvky v stĺpci
+                        nad vedúcou jednotkou.</p>
+                     <br>
+                     <p style="color: grey">Príklad s podrobným postupom nájdete v záložke "Vypočítané príklady"
                      </p>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
