--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -1,65 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-      <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <link rel="stylesheet" href="../../../styleAll.css">
-      <script src="../../../sizeAdjust.js" defer></script>
-      <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-      <title>Algebraické operácie s maticami</title>
-   </head>
-   <script>
-      $(document).ready(function() {
-      	$(document).ready(function() {
-      $('#sidebar12').load('../../../components/sidebar.html', function() {
-        $('#sidebar12').find('li:contains("Algebraické operácie s maticami")').addClass('active').children('a').addClass('active');
-      });
-      });     
-         $('#sidebar').load('../../../components/collapse_bar.html',function() {
-            $('#sidebar').find('li:contains("Algebraické operácie s maticami")').addClass('active').children('a').addClass('active');
+
+<head>
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
+   <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <link rel="stylesheet" href="../../../styleAll.css">
+   <script src="../../../sizeAdjust.js" defer></script>
+   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+   <title>Algebraické operácie s maticami</title>
+</head>
+<script>
+   $(document).ready(function () {
+      $(document).ready(function () {
+         $('#sidebar12').load('../../../components/sidebar.html', function () {
+            $('#sidebar12').find('li:contains("Algebraické operácie s maticami")').addClass('active').children('a').addClass('active');
          });
-         $('#myTab').load('../../../components/tab_links.html');
-      
       });
-   </script>
-   <body >
-      <div class="container-fluid">
-         <div class="row">
-            <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12" ></nav>
-            <main style="margin-top: 3rem;">
-               <header>
-                  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
-                     <div class="container-fluid justify-content-start">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-offset="56">
+      $('#sidebar').load('../../../components/collapse_bar.html', function () {
+         $('#sidebar').find('li:contains("Algebraické operácie s maticami")').addClass('active').children('a').addClass('active');
+      });
+      $('#myTab').load('../../../components/tab_links.html');
+
+   });
+</script>
+
+<body>
+   <div class="container-fluid">
+      <div class="row">
+         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12"></nav>
+         <main style="margin-top: 3rem;">
+            <header>
+               <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                  <div class="container-fluid justify-content-start">
+                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar"
+                        aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation"
+                        data-bs-offset="56">
                         <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <a class="navbar-brand" href="../../../landingPage/index.html"style="padding-left: 1rem;">Matice</a>
-                     </div>
-                  </nav>
-               </header>
-               <div class="offcanvas-backdrop offcanvas backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
-               <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar" style="top: 56px; height: calc(100% - 56px);"></div>
-               <div class="container my-5" >
-                  <ul class="nav nav-tabs nav-fill mb-4" id="myTab" role="tablist"></ul>
-                  <div class="tab-content" id="myTabContent">
-                     <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
-                        <p>Algebraické operácie s maticami</p>
-                     </div>
-                     <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
-                        <p>Tab 2 content</p>
-                     </div>
-                     <div class="tab-pane fade" id="practice-problems" role="tabpanel" aria-labelledby="practice-problems-tab">
-                        <p>Tab 3 content</p>
-                     </div>
+                     </button>
+                     <a class="navbar-brand" href="../../../landingPage/index.html"
+                        style="padding-left: 1rem;">Matice</a>
+                  </div>
+               </nav>
+            </header>
+            <div class="offcanvas-backdrop offcanvas backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
+            <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar"
+               style="top: 56px; height: calc(100% - 56px);"></div>
+            <div class="container my-5">
+               <ul class="nav nav-tabs nav-fill" style="margin-bottom: 3rem;" id="myTab" role="tablist"></ul>
+               <div class="tab-content" id="myTabContent">
+                  <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
+                     <p>K základným algebraickým operáciám s maticami patria vynásobenie matice konštantou, súčet matíc,
+                        a súčin matíc. Uvedieme tu aj definíciu transponovanej matice a jej vzt'ah k algebraickým
+                        operáciám.</p>
+                     <br><br>
+                     <h6 style="color: darkblue">Násobok matice konštantou:</h6>
+                     <hr>
+                     <p>Ak <span class="mth">$${\bf A}=[a_{ij}]_{m\times n}$$</span> je matica
+                        a <span class="mth">$$d$$</span> je
+                        konštanta, tak
+                        <span class="mth">$$d$$</span>-násobok
+                        matice <span class="mth">$${\bf A}$$</span>
+                        je matica <span class="mth">$$d{\bf A}=[d.a_{ij}]_{m\times n}$$</span> . (Zjednodušene, každý
+                        prvok matice sa vynásobí
+                        rovnakou konštantou <span class="mth">$$d$$</span>.)
+                     </p>
+                     <br><br>
+                     <h6 style="color: darkblue">Súčet matíc:</h6>
+                     <hr>
+                     <p>Súčet matíc je definovaný len pre matice rovnakého typu: Ak <span class="mth">$${\bf
+                           A}=[a_{ij}]{m\times n}$$</span> a <span class="mth">$${\bf B}=[b{ij}]{m\times
+                           n}$$</span> sú dve matice typu <span class="mth">$$m\times n$$</span>, ich súčet je matica
+                        <span class="mth">$${\bf C}={\bf A}+{\bf B}$$</span>, <span class="mth">$${\bf C}=[c{ij}]{m
+                           \times
+                           n}$$</span>, pričom <span class="mth">$$c{ij}=a_{ij}+b_{ij}$$</span>. (Jednoducho povedané,
+                        pri
+                        súčte matíc sa sčítajú prvky na rovnakých miestach).
+                     </p>
+                     <br><br>
+                     <h6 style="color: darkblue">Súčin matíc:</h6>
+                     <hr>
+                     <p>
+                        Najkomplikovanejšia je definícia súčinu matíc; maticu <span class="mth">$$\mathbf{A}$$</span>
+                        možno (sprava) vynásobiť maticou
+                        <span class="mth">$$\mathbf{B}$$</span> len vtedy, ak počet stĺpcov matice <span
+                           class="mth">$$\mathbf{A}$$</span> sa rovná
+                        počtu riadkov matice <span class="mth">$$\mathbf{B}$$</span>. Postup
+                        je nasledovný: Ak <span class="mth">$${\bf A}=[a_{ik}]_{m\times \ell}$$</span> a <span
+                           class="mth">$${\bf B}=[b_{kj}]_{\ell \times
+                           n}$$</span> sú matice typu <span class="mth">$$m\times \ell$$</span> a<span class="mth">
+                           $$\ell \times
+                           n$$</span> , ich
+                        súčinom je matica <span class="mth">$${\bf C} = \bf AB$$</span>
+                        typu
+                        <span class="mth">$$m\times n$$</span> , ktorej <span class="mth">$$i,j$$</span> -ty prvok
+                        vypočítame pomocou vzt'ahu:$$c_{ij} = a_{i1}b_{1j} +
+                        a_{i2}b_{2j} +
+                        \dots +
+                        a_{i\ell}b_{\ell j}\ \ .$$
+
+                        Inak povedané, <span class="mth">$$[i,j]$$</span> -ty prvok matice <span class="mth">$${\bf
+                           C}=\bf AB$$</span> je skalárnym
+                        súčinom <span class="mth">$$i$$</span> -teho riadku
+                        matice <span class="mth">$$\bf A$$</span> s <span class="mth"> $$j$$</span> -tym stĺpcom matice
+                        <span class="mth">$$\bf B$$</span> .
+                     </p>
+                  </div>
+                  <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
+                     <p>Tab 2 content</p>
+                  </div>
+                  <div class="tab-pane fade" id="practice-problems" role="tabpanel"
+                     aria-labelledby="practice-problems-tab">
+                     <p>Tab 3 content</p>
                   </div>
                </div>
-            </main>
-         </div>
+            </div>
+         </main>
       </div>
-   </body>
+   </div>
+</body>
+
 </html>
