--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -101,16 +101,16 @@
                         súčinom je matica <span class="mth">$${\bf C} = \bf AB$$</span>
                         typu
                         <span class="mth">$$m\times n$$</span> , ktorej <span class="mth">$$i,j$$</span> -ty prvok
-                        vypočítame pomocou vzt'ahu:$$c_{ij} = a_{i1}b_{1j} +
-                        a_{i2}b_{2j} +
-                        \dots +
-                        a_{i\ell}b_{\ell j}\ \ .$$
+                        vypočítame pomocou vzt'ahu:
+                     <div class="table-responsive" style="margin: 3rem auto 1rem auto;">\begin{align}
+                        c_{ij} &= a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{i\ell}b_{\ell j} \
+                        \end{align}</div>
 
-                        Inak povedané, <span class="mth">$$[i,j]$$</span> -ty prvok matice <span class="mth">$${\bf
-                           C}=\bf AB$$</span> je skalárnym
-                        súčinom <span class="mth">$$i$$</span> -teho riadku
-                        matice <span class="mth">$$\bf A$$</span> s <span class="mth"> $$j$$</span> -tym stĺpcom matice
-                        <span class="mth">$$\bf B$$</span> .
+                     Inak povedané, <span class="mth">$$[i,j]$$</span> -ty prvok matice <span class="mth">$${\bf
+                        C}=\bf AB$$</span> je skalárnym
+                     súčinom <span class="mth">$$i$$</span> -teho riadku
+                     matice <span class="mth">$$\bf A$$</span> s <span class="mth"> $$j$$</span> -tym stĺpcom matice
+                     <span class="mth">$$\bf B$$</span> .
                      </p>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
