--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -61,57 +61,88 @@
                         a súčin matíc. Uvedieme tu aj definíciu transponovanej matice a jej vzt'ah k algebraickým
                         operáciám.</p>
                      <br><br>
-                     <h6 style="color: darkblue">Násobok matice konštantou:</h6>
-                     <hr>
-                     <p>Ak <span class="mth">$${\bf A}=[a_{ij}]_{m\times n}$$</span> je matica
-                        a <span class="mth">$$d$$</span> je
-                        konštanta, tak
-                        <span class="mth">$$d$$</span>-násobok
-                        matice <span class="mth">$${\bf A}$$</span>
-                        je matica <span class="mth">$$d{\bf A}=[d.a_{ij}]_{m\times n}$$</span> . (Zjednodušene, každý
-                        prvok matice sa vynásobí
-                        rovnakou konštantou <span class="mth">$$d$$</span>.)
-                     </p>
+                     <div style="background-color: rgb(245, 245, 245); padding: 1rem; border-radius: 6px;">
+                        <h6 style="color: darkblue">Násobok matice konštantou:</h6>
+                        <p>Ak <span class="mth">$${\bf A}=[a_{ij}]_{m\times n}$$</span> je matica
+                           a <span class="mth">$$d$$</span> je
+                           konštanta, tak
+                           <span class="mth">$$d$$</span>-násobok
+                           matice <span class="mth">$${\bf A}$$</span>
+                           je matica <span class="mth">$$d{\bf A}=[d.a_{ij}]_{m\times n}$$</span> . (Zjednodušene, každý
+                           prvok matice sa vynásobí
+                           rovnakou konštantou <span class="mth">$$d$$</span>.)
+                        </p>
+                     </div>
                      <br><br>
-                     <h6 style="color: darkblue">Súčet matíc:</h6>
-                     <hr>
-                     <p>Súčet matíc je definovaný len pre matice rovnakého typu: Ak <span class="mth">$${\bf
-                           A}=[a_{ij}]{m\times n}$$</span> a <span class="mth">$${\bf B}=[b{ij}]{m\times
-                           n}$$</span> sú dve matice typu <span class="mth">$$m\times n$$</span>, ich súčet je matica
-                        <span class="mth">$${\bf C}={\bf A}+{\bf B}$$</span>, <span class="mth">$${\bf C}=[c{ij}]{m
-                           \times
-                           n}$$</span>, pričom <span class="mth">$$c{ij}=a_{ij}+b_{ij}$$</span>. (Jednoducho povedané,
-                        pri
-                        súčte matíc sa sčítajú prvky na rovnakých miestach).
-                     </p>
-                     <br><br>
-                     <h6 style="color: darkblue">Súčin matíc:</h6>
-                     <hr>
-                     <p>
-                        Najkomplikovanejšia je definícia súčinu matíc; maticu <span class="mth">$$\mathbf{A}$$</span>
-                        možno (sprava) vynásobiť maticou
-                        <span class="mth">$$\mathbf{B}$$</span> len vtedy, ak počet stĺpcov matice <span
-                           class="mth">$$\mathbf{A}$$</span> sa rovná
-                        počtu riadkov matice <span class="mth">$$\mathbf{B}$$</span>. Postup
-                        je nasledovný: Ak <span class="mth">$${\bf A}=[a_{ik}]_{m\times \ell}$$</span> a <span
-                           class="mth">$${\bf B}=[b_{kj}]_{\ell \times
-                           n}$$</span> sú matice typu <span class="mth">$$m\times \ell$$</span> a<span class="mth">
-                           $$\ell \times
-                           n$$</span> , ich
-                        súčinom je matica <span class="mth">$${\bf C} = \bf AB$$</span>
-                        typu
-                        <span class="mth">$$m\times n$$</span> , ktorej <span class="mth">$$i,j$$</span> -ty prvok
-                        vypočítame pomocou vzt'ahu:
-                     <div class="table-responsive" style="margin: 3rem auto 1rem auto;">\begin{align}
-                        c_{ij} &= a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{i\ell}b_{\ell j} \
-                        \end{align}</div>
+                     <div>
+                        <h6 style="color: darkblue">Súčet matíc:</h6>
 
-                     Inak povedané, <span class="mth">$$[i,j]$$</span> -ty prvok matice <span class="mth">$${\bf
-                        C}=\bf AB$$</span> je skalárnym
-                     súčinom <span class="mth">$$i$$</span> -teho riadku
-                     matice <span class="mth">$$\bf A$$</span> s <span class="mth"> $$j$$</span> -tym stĺpcom matice
-                     <span class="mth">$$\bf B$$</span> .
-                     </p>
+                        <p>Súčet matíc je definovaný len pre matice rovnakého typu: Ak <span class="mth">$${\bf
+                              A}=[a_{ij}]{m\times n}$$</span> a <span class="mth">$${\bf B}=[b{ij}]{m\times
+                              n}$$</span> sú dve matice typu <span class="mth">$$m\times n$$</span>, ich súčet je matica
+                           <span class="mth">$${\bf C}={\bf A}+{\bf B}$$</span>, <span class="mth">$${\bf C}=[c{ij}]{m
+                              \times
+                              n}$$</span>, pričom <span class="mth">$$c{ij}=a_{ij}+b_{ij}$$</span>. (Jednoducho
+                           povedané,
+                           pri
+                           súčte matíc sa sčítajú prvky na rovnakých miestach).
+                        </p>
+                     </div>
+                     <br><br>
+                     <div style="background-color: rgb(245, 245, 245); padding: 1rem; border-radius: 6px;">
+                        <h6 style="color: darkblue">Súčin matíc:</h6>
+
+                        <p>
+                           Najkomplikovanejšia je definícia súčinu matíc; maticu <span class="mth">$$\mathbf{A}$$</span>
+                           možno (sprava) vynásobiť maticou
+                           <span class="mth">$$\mathbf{B}$$</span> len vtedy, ak počet stĺpcov matice <span
+                              class="mth">$$\mathbf{A}$$</span> sa rovná
+                           počtu riadkov matice <span class="mth">$$\mathbf{B}$$</span>. Postup
+                           je nasledovný: Ak <span class="mth">$${\bf A}=[a_{ik}]_{m\times \ell}$$</span> a <span
+                              class="mth">$${\bf B}=[b_{kj}]_{\ell \times
+                              n}$$</span> sú matice typu <span class="mth">$$m\times \ell$$</span> a<span class="mth">
+                              $$\ell \times
+                              n$$</span> , ich
+                           súčinom je matica <span class="mth">$${\bf C} = \bf AB$$</span>
+                           typu
+                           <span class="mth">$$m\times n$$</span> , ktorej <span class="mth">$$i,j$$</span> -ty prvok
+                           vypočítame pomocou vzt'ahu:
+                        <div class="table-responsive" style="margin: 3rem auto 1rem auto;">\begin{align}
+                           c_{ij} &= a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{i\ell}b_{\ell j} \
+                           \end{align}</div>
+
+                        Inak povedané, <span class="mth">$$[i,j]$$</span> -ty prvok matice <span class="mth">$${\bf
+                           C}=\bf AB$$</span> je skalárnym
+                        súčinom <span class="mth">$$i$$</span> -teho riadku
+                        matice <span class="mth">$$\bf A$$</span> s <span class="mth"> $$j$$</span> -tym stĺpcom matice
+                        <span class="mth">$$\bf B$$</span> .
+                        </p>
+                     </div>
+                     <p style="margin-top: 2rem;">Pre počítanie s maticami platia analógie pravidiel platných pre
+                        algebraické
+                        operácie s reálnymi
+                        číslami: komutatívny a asociatívny zákon pre sčítanie matíc, distributívny zákon pre násobenie
+                        vzhl'adom k sčítaniu, a asociatívny zákon pre násobenie matíc. Násobenie matíc vo všeobecnosti
+                        nie je komutatívne.</p>
+                     <br><br>
+                     <section>
+                        <h6 style="color: darkblue">Transponovaná matica:</h6>
+                        <p>Nech <span class="mth">$${\bf A}=[a_{ij}]$$</span> je matica typu <span class="mth">$$m\times
+                              n$$</span>. Maticu
+                           <span class="mth">$${\bf B}=[b_{ij}]$$</span> typu
+                           <span class="mth">$$n\times m$$</span>
+                           nazveme transponovanou k matici <span class="mth">$$\bf A$$</span>, ak <span
+                              class="mth">$$b_{ij}=a_{ji}$$</span> pre <span class="mth">$$1\le i\le
+                              m$$</span>, <span class="mth">$$1\le j\le
+                              n$$</span>. Vol'ne povedané, riadky pôvodnej matice sa stávajú stĺpcami v transponovanej
+                           matici (a naopak).
+                           Pre transponovanú maticu používame označenie <span class="mth">$${\bf B}={\bf A}^T$$</span>.
+                           Je
+                           zrejmé, že
+                           <span class="mth">$$({\bf
+                              A}^T)^T={\bf A}$$</span>.
+                        </p>
+                     </section>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
                      <p>Tab 2 content</p>
