mobile view improved by reducing padding on sites

--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -142,6 +142,19 @@
                            <span class="mth">$$({\bf
                               A}^T)^T={\bf A}$$</span>.
                         </p>
+                        <br>
+                        <p>Transponované matice súvisia s algebraickými operáciami nasledovne:</p>
+                        <br>
+                        <p>\begin{align*}
+                           (d{\bf A})^T &= d({\bf A}^T) \
+                           \end{align*}
+                           \begin{align*}
+                           ({\bf A}+{\bf B})^T &= {\bf A}^T+{\bf B}^T \
+                           \end{align*}
+                           \begin{align*}
+                           ({\bf AB})^T &= {\bf B}^T{\bf A}^T \
+                           \end{align*}
+                        </p>
                      </section>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
