--- a/linearnaAlgebra/témy/vypočetGauss/index.html
+++ b/linearnaAlgebra/témy/vypočetGauss/index.html
@@ -57,8 +57,7 @@
                <ul class="nav nav-tabs nav-fill" style="margin-bottom: 3rem;" id="myTab" role="tablist"></ul>
                <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
-                     <p>Na výpočet <strong>Gaussovho tvaru matice</strong> možno použit' nasledujúci jednoduchý
-                        algoritmus:
+                     <p>Na výpočet <strong>Gaussovho tvaru matice</strong> možno použit' nasledujúci postup:
                      <div style="text-align: center;">
                         <ul style="display: inline-block; text-align: left; margin: 1rem auto;" class="rules">
                            <li>A1: Ak matica
