--- a/linearnaAlgebra/témy/uvod/index.html
+++ b/linearnaAlgebra/témy/uvod/index.html
@@ -104,9 +104,9 @@
                      $$</p>
                </div>
                <p>prvok v <strong>i</strong>-tom riadku a <strong>j</strong>-tom stĺpci je označený symbolom
-                  <span class="mth">$$c_{ij}$$</span>.
+                  $$c_{ij}$$.
                   Pre úsporu miesta uvedenú maticu stručne zapisujeme v tvare
-                  <span class="mth">$$\boldsymbol{C} = [c_{ij}]_{m \times n}$$</span>
+                  $$\boldsymbol{C} = [c_{ij}]_{m \times n}$$
                </p>
 
             </div>
