detStvMatice added content

--- a/linearnaAlgebra/témy/uvod/index.html
+++ b/linearnaAlgebra/témy/uvod/index.html
@@ -91,7 +91,8 @@
                   <strong>m</strong> &#xd7 <strong>n</strong> môže teda byt' označená a opísaná napr. nasledujúcim
                   spôsobom:
                </p>
-               <div class="table-responsive" style="margin: 3rem auto 1rem auto;">
+               <div class="table-responsive"
+                  style="margin: 3rem auto 1rem auto; overflow-y: hidden; text-align: center;">
                   <p>$$
                      \boldsymbol{C} = \begin{pmatrix}
                      c_{11} & c_{12} & \dots & c_{1j} & \dots & c_{1n} \\
