added sarrus img

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -117,6 +117,10 @@
                               $$</p>
                         </div>
                      </div>
+                     <div>
+                        <img id="sarus2" style=" display: block;" src="../../../images/Sarrus_rule2.svg" alt="sarusIMG">
+                     </div>
+
 
 
                   </div>
